--- a/src/components/Upload/panCard.css
+++ b/src/components/Upload/panCard.css
@@ -1,4 +1,4 @@
-.aadhar-container {
+.pan-container {
     padding: 40px 0;
     height: 80vh;
     display: flex;
@@ -7,54 +7,53 @@
 }
 
 /* Card Style */
-.wraper-aadhar-box {
+.wraper-pan-box {
     display: flex;
     align-items: flex-start;
     justify-content: center;
 }
-.aadhar-upload-card {
+.pan-upload-card {
     background-color: #ffffff;
     border-radius: 12px;
     margin: 0 20px;
-    width: 55%; 
+    width: 40%; 
     padding: 30px;
     box-shadow: 0px 6px 12px rgba(0, 0, 0, 0.1);
 }
-.aadhar-upload-card:nth-child(2){
+.pan-upload-card:nth-child(2){
     width: 40%;
 }
-.wraper-aadhar {
+.wraper-pan {
     display: flex;
     align-items: center;
     justify-content: space-around;
 }
-.aadhar-front-img{
+.pan-front-img{
+    width: 313px;
+    border: 1px solid #ddd;
+    border-radius: 6px;
+    overflow: hidden;
+}
+.pan-back-img{
     width: 48%;
     border: 1px solid #ddd;
     border-radius: 6px;
     overflow: hidden;
 }
-.aadhar-back-img{
-    width: 48%;
-    border: 1px solid #ddd;
-    border-radius: 6px;
-    overflow: hidden;
-}
-.aadhar-img-title{
+.pan-img-title{
     font-size: 14px;
     text-align: center;
     margin: 0;
     padding: 6px 0;
 }
-/* .aadhar-extracted-content {
+/* .pan-extracted-content {
     padding-top: 50px;
 } */
-.aadhar-title {
+.pan-title {
     font-size: 16px;
     line-height: 24px;
     color: #222;
     padding: 0 0 14px;
-    text-transform: capitalize;
 }
 
 /* custom upload  */
